# Antons_OpenGL_Tutorials

./: .gitignore  CMakeLists.txt  README.md
doc/: Extended_Initialization.md  OpenGL_4_Shaders.md  hello-triangle.md
src/: main.cpp
src/shaders/: generic.frag  generic.vert
